--- a/physician/waitingApprove.html
+++ b/physician/waitingApprove.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Pages / Not Found 404 - NiceAdmin Bootstrap Template</title>
+  <title>Wait Approve </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -38,8 +38,8 @@
     <div class="container">
 
       <section class="section error-404 min-vh-100 d-flex flex-column align-items-center justify-content-center">
-        <h1>Error</h1>
-        <h2>Your Email Or Password are Incorrect</h2>
+        <h1>Notes</h1>
+        <h2>Your account is pending for approve. Please wait...</h2>
         <a class="btn" href="phyLoginForm.php">Back to Login page</a>
         <img src="assets/img/not-found.svg" class="img-fluid py-5" alt="Page Not Found">
       
